<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editSerial"
        android:layout_centerHorizontal="true"
        android:minWidth="100dp"
        android:text="@string/check_passport_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editNumber"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Series"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Number"
        android:inputType="number"
        android:maxLength="6" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/Check" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/Scan_tip"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:text="@string/History" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/scan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="53dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scan"
        android:layout_marginStart="-53dp"
        android:layout_toEndOf="@+id/scan"
        android:text="*" />

</RelativeLayout>